--- a/app/assets/stylesheets/components/pins/_create-pin.scss
+++ b/app/assets/stylesheets/components/pins/_create-pin.scss
@@ -187,7 +187,7 @@
 
 .board-select-list div{
   font-family: 'roboto', sans-serif;
-  color: rgb(169, 169, 169);
+  color: rgb(173, 173, 173);
   text-decoration: none;
   display: block;
   border-radius: 12px;
