--- a/app/assets/stylesheets/components/site/_navbar.scss
+++ b/app/assets/stylesheets/components/site/_navbar.scss
@@ -432,7 +432,7 @@ button:active {
   height: 82px;
   position:absolute;
   right: 344px;
-  top: 278px;
+  top: 280px;
   margin-top: 100;
   margin-left: 0px;
   z-index:999;
